--- a/bookstore/src/main/resources/templates/booklist.html
+++ b/bookstore/src/main/resources/templates/booklist.html
@@ -1,5 +1,5 @@
 <! DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"> 
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"> 
 <head>
 	<title>Books</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,7 +8,14 @@
 	<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 	<body>
 	
+		<form th:action="@{/logout}" method="post" align="right">
+				<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+		</form>
+		
+		<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+	
 		<h1>Books</h1>
+		
 		
 		<table class="table table-striped">
 		
@@ -18,6 +25,7 @@
 				<th>ISBN</th>
 				<th>Year</th>
 				<th>Category</th>
+				<th sec:authorize="hasRole('ADMIN')"> </th>
 			</tr>
 			
 			<tr th:each = "book : ${book}">
@@ -26,11 +34,16 @@
 				<td th:text="${book.isbn}"></td>
 				<td th:text="${book.year}"></td>
 				<td th:text="${book.category.name}"></td>
-				<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+				<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-xs btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>  
 				<td><a class="btn btn-primary" th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
 			</tr>
 			
 		</table>
 		<a href="/addbook" class="btn btn-primary">Add Book</a>
+		
+		
+			
+		
+	
 	</body>
 </html>
